--- a/mypy.ini
+++ b/mypy.ini
@@ -17,4 +17,4 @@ plugins =
 
 
 [mypy.plugins.django-stubs]
-django_settings_module = testingdjangostubsbug.settings
+django_settings_module = base.settings
